# FFXIVBot

./: .gitignore  .pre-commit-config.yaml  bot  bot.py  commands.py  config.py  data  db.py  domain.py  lodestone.py  main.py  main_tests.py  professionals.py  pyproject.toml  requirements.txt  web_help.py
backends/: db.py  lodestone.py
test/: request_mocking.py  test_bot.py  test_commands.py  test_db.py  test_lodestone.py  test_professionals.py
test/backends/: test_db.py  test_lodestone.py
