[project]
name = 'professionals-bot'
version = '1.0.0'
dependencies = [
    'requests',
    'python-dotenv',
    'discord.py',
    'idna',
    'beautifulsoup4',
]

[project.optional-dependencies]
dev = ['pre-commit']
test = [
    'pytest',
    'responses',
]

[tool.isort]
profile = 'black'
line_length = 90
include_trailing_comma = true
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ['FFXIVBot']
skip = ['venv', '.venv', 'build', 'dist', '__pycache__']

[tool.black]
line-length = 90